      
    - added a feature to eager loading whereby subqueries set
      as column_property() with explicit label names (which is not
      necessary, btw) will have the label anonymized when
      the instance is part of the eager join, to prevent
      conflicts with a subquery or column of the same name 
      on the parent object.  [ticket:1019]
      
- sql
    - Added COLLATE support via the .collate(<collation>)
      expression operator and collate(<expr>, <collation>) sql
      function.

    - Fixed bug with union() when applied to non-Table connected
      select statements

    - improved behavior of text() expressions when used as 
      FROM clauses, such as select().select_from(text("sometext"))
      [ticket:1014]
      
- engines
    - Pool listeners can now be provided as a dictionary of
      callables or a (possibly partial) duck-type of
      PoolListener, your choice.

- mssql
    - Added "odbc_autotranslate" parameter to engine / dburi
      parameters. Any given string will be passed through to the
      ODBC connection string as:

            "AutoTranslate=%s" % odbc_autotranslate

      [ticket:1005]

    - Added "odbc_options" parameter to engine / dburi
      parameters. The given string is simply appended to the
      SQLAlchemy-generated odbc connection string.

      This should obviate the need of adding a myriad of ODBC
      options in the future.


- firebird
    - Handle the "SUBSTRING(:string FROM :start FOR :length)"
      builtin.


0.4.5
=====
- orm
    - A small change in behavior to session.merge() - existing
      objects are checked for based on primary key attributes, not
      necessarily _instance_key.  So the widely requested
      capability, that:

            x = MyObject(id=1)
            x = sess.merge(x)

      will in fact load MyObject with id #1 from the database if
      present, is now available.  merge() still copies the state
      of the given object to the persistent one, so an example